--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 header {
-  padding-bottom: 50vh;
+  padding-bottom: 50vw;
 }
 
 header nav {
@@ -14,4 +14,17 @@ header nav {
   top: 0;
   left: 0;
   z-index: 100;
+}
+
+@media screen and (min-width: 800px) {
+  .aboutimg {
+    width: 600px;
+    height: 400px;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .cardbody {
+    width: 600px;
+  }
 }
