--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,19 @@
 @charset "UTF-8";
 
 body {
+  margin: 0;
   font-family: "Josefin Sans", sans-serif;
+  font-size: 14px;
+  line-height: 1.4;
+  color: #333;
+  background-color: #f4f4f4;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  overflow-x: hidden; /*横スクロール禁止*/
 }
 
 header {
-  padding-bottom: 50vh;
+  margin-bottom: 700px;
 }
 
 header nav {
@@ -14,4 +22,27 @@ header nav {
   top: 0;
   left: 0;
   z-index: 100;
+}
+
+@media screen and (min-width: 680px) {
+  main {
+    margin-left: 80px;
+    margin-right: 200px;
+  }
+  .r_img {
+    width: 400px;
+  }
+  .r_card {
+    /* width: 500px; */
+    margin-left: 40px;
+    margin-right: 100px;
+  }
+}
+
+p {
+  display: inline-block;
+}
+
+.ff_JS {
+  font-family: "Josefin Sans", sans-serif;
 }
