--- a/src/css/style.css
+++ b/src/css/style.css
@@ -33,7 +33,7 @@ header nav {
     width: 400px;
   }
   .r_card {
-    /* width: 500px; */
+    width: 650px;
     margin-left: 40px;
     margin-right: 100px;
   }
